created home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 
 <body>
     <div id="parent">
-        <div id="nav"></div>
+        <div id="nav">
+            <div id="nav_Elements">
+                <div class="navELements currentNavLocation"><img src="./icons/navIconHome.png" alt=""><span>Home</span>
+                </div>
+                <div class="navELements"><img src="./icons/activity.png" alt=""><span>Activity</span></div>
+                <div class="navELements"><img src="./icons/profile.png" alt=""><span>Profile</span></div>
+                <div class="navELements"><img src="./icons/settings.png" alt=""><span>Settings</span></div>
+
+
+            </div>
+        </div>
+
+
         <div id="content">
             <div id="headerText">Home</div>
             <div id="addingPostArea">
@@ -31,6 +43,49 @@
                     </div>
                 </div>
             </div>
+
+            <div class="posts">
+                <div class="creatorInfo">
+                    <img src="./icons/fakeprofile.png" alt="">
+                    <div class="creatorTextInfo">
+                        <span class="postCreatorNameinPost">Samantha Hill</span><br>
+                        <span class="creationTimeofThepost">3 hours ago</span>
+                    </div>
+                </div>
+                <div class="caption">
+                    <span>Just finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm Gladwell</span>
+                </div>
+                <div class="imageFrame"><img src="./icons/example.png" alt=""></div>
+                <div class="postItarection">
+                    <div class="postInarectionItem"><img src="./icons/comments.png" alt=""><span>24</span></div>
+                    <div class="postInarectionItem"><img src="./icons/likes.png" alt=""><span>423</span></div>
+                </div>
+                <div class="commentsItarections">
+                    <input type="text" placeholder="Add a comment...">
+                </div>
+            </div>
+            <div class="posts">
+                <div class="creatorInfo">
+                    <img src="./icons/fakeprofile.png" alt="">
+                    <div class="creatorTextInfo">
+                        <span class="postCreatorNameinPost">Samantha Hill</span><br>
+                        <span class="creationTimeofThepost">3 hours ago</span>
+                    </div>
+                </div>
+                <div class="caption">
+                    <span>Just finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm Gladwell</span>
+                </div>
+                <!-- <div class="imageFrame"><img src="./icons/example.png" alt=""></div> -->
+                <div class="postItarection">
+                    <div class="postInarectionItem"><img src="./icons/comments.png" alt=""><span>24</span></div>
+                    <div class="postInarectionItem"><img src="./icons/likes.png" alt=""><span>423</span></div>
+                </div>
+                <div class="commentsItarections">
+                    <input type="text" placeholder="Add a comment...">
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
