start django project

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,11 +17,10 @@
     <div id="parent">
         <div id="nav">
             <div id="nav_Elements">
-                <div class="navELements currentNavLocation"><img src="./icons/navIconHome.png" alt=""><span>Home</span>
+                <div class="navELements currentNavLocation"><img src="/static/navIconHome.png" alt=""><span>Home</span>
                 </div>
-                <div class="navELements"><img src="./icons/activity.png" alt=""><span>Activity</span></div>
-                <div class="navELements"><img src="./icons/profile.png" alt=""><span>Profile</span></div>
-                <div class="navELements"><img src="./icons/settings.png" alt=""><span>Settings</span></div>
+                <div class="navELements"><img src="/static/activity.png" alt=""><span>Activity</span></div>
+                <div class="navELements"><img src="/static/profile.png" alt=""><span>Profile</span></div>
 
 
             </div>
@@ -30,23 +29,13 @@
 
         <div id="content">
             <div id="headerText">Home</div>
-            <div id="addingPostArea">
-                <div id="addingPostElements">
-                    <div id="profilePcitrue"><img src="./icons/fakeprofile.png" alt=""></div>
-                    <div id="writing">
-                        <div id="textArea"><textarea placeholder="What's on you mind?" name="postText"
-                                id="postText"></textarea></div>
-                        <div id="postButtonArea">
-                            <button>Post</button>
-                            <div id="selcetImageButtonPareant"><img src="./icons/selectImage.png" alt=""></div>
-                        </div>
-                    </div>
-                </div>
+            <div id="porfileInfoArea">
+                <img src="/static/fakeprofile.png" alt=""><span>Rakib Ahmed</span>
             </div>
 
             <div class="posts">
                 <div class="creatorInfo">
-                    <img src="./icons/fakeprofile.png" alt="">
+                    <img src="/static/fakeprofile.png" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">Samantha Hill</span><br>
                         <span class="creationTimeofThepost">3 hours ago</span>
@@ -55,10 +44,10 @@
                 <div class="caption">
                     <span>Just finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm Gladwell</span>
                 </div>
-                <div class="imageFrame"><img src="./icons/example.png" alt=""></div>
+                <div class="imageFrame"><img src="/static/example.png" alt=""></div>
                 <div class="postItarection">
-                    <div class="postInarectionItem"><img src="./icons/comments.png" alt=""><span>24</span></div>
-                    <div class="postInarectionItem"><img src="./icons/likes.png" alt=""><span>423</span></div>
+                    <div class="postInarectionItem"><img src="/static/comments.png" alt=""><span>24</span></div>
+                    <div class="postInarectionItem"><img src="/static/likes.png" alt=""><span>423</span></div>
                 </div>
                 <div class="commentsItarections">
                     <input type="text" placeholder="Add a comment...">
@@ -66,7 +55,7 @@
             </div>
             <div class="posts">
                 <div class="creatorInfo">
-                    <img src="./icons/fakeprofile.png" alt="">
+                    <img src="/static/fakeprofile.png" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">Samantha Hill</span><br>
                         <span class="creationTimeofThepost">3 hours ago</span>
@@ -75,10 +64,10 @@
                 <div class="caption">
                     <span>Just finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm GladwellJust finished reading Malcolm Gladwell</span>
                 </div>
-                <!-- <div class="imageFrame"><img src="./icons/example.png" alt=""></div> -->
+                <!-- <div class="imageFrame"><img src="/static/example.png" alt=""></div> -->
                 <div class="postItarection">
-                    <div class="postInarectionItem"><img src="./icons/comments.png" alt=""><span>24</span></div>
-                    <div class="postInarectionItem"><img src="./icons/likes.png" alt=""><span>423</span></div>
+                    <div class="postInarectionItem"><img src="/static/comments.png" alt=""><span>24</span></div>
+                    <div class="postInarectionItem"><img src="/static/likes.png" alt=""><span>423</span></div>
                 </div>
                 <div class="commentsItarections">
                     <input type="text" placeholder="Add a comment...">
