--- a/ui/profile.html
+++ b/ui/profile.html
@@ -10,23 +10,25 @@
         href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <title>Protagonits</title>
+    <title>Rakib Ahmed</title>
 </head>
 
 <body>
+    
     <div id="parent">
+        <div class="navSpace"></div>
         <div id="nav">
             <div id="nav_Elements">
-                <div class="navELements currentNavLocation"><img src="/static/navIconHome.png" alt=""><span>Home</span>
+                <div class="navELements" onclick="gotoPage('/')"><img src="/static/navIconHome.png" alt=""><span>Home</span>
                 </div>
-                <div class="navELements"><img src="/static/activity.png" alt=""><span>Activity</span></div>
-                <div class="navELements"><img src="/static/profile.png" alt=""><span>Profile</span></div>
+                <div class="navELements" onclick="gotoPage('/activity')"><img src="/static/activity.png" alt=""><span>Activity</span></div>
+                <div class="navELements currentNavLocation" ><img src="/static/profile.png" alt=""><span>Profile</span></div>
 
 
             </div>
         </div>
 
-
+        <div id="loadingScreenHtml" style="display: none;"><div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div></div>
         <div id="content">
             <div id="headerText">Home</div>
             <div id="porfileInfoArea">
@@ -77,6 +79,7 @@
 
         </div>
     </div>
+    <script src="/static/main.js"></script>
 </body>
 
 </html>
