created autometic accoutn creation

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -30,9 +30,9 @@
 
         <div id="loadingScreenHtml" style="display: none;"><div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div></div>
         <div id="content">
-            <div id="headerText">Home</div>
+            <div id="headerText">Profile</div>
             <div id="porfileInfoArea">
-                <img src="/static/fakeprofile.png" alt=""><span>Rakib Ahmed</span>
+                <img src="/static/profileIcons/{{userid}}.jpg" alt=""><span>{{name}}</span>
             </div>
 
             <div class="posts">
