--- a/ui/post.html
+++ b/ui/post.html
@@ -67,7 +67,7 @@
                     <img src="/static/profileIcons/{{userId}}.jpg" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">{{userName}}</span><br>
-                        <span class="creationTimeofThepost">3 hours ago</span>
+                        <span class="creationTimeofThepost">{{timePassed}}</span>
                     </div>
                 </div>
                 <div class="caption">
