--- a/ui/postrender.html
+++ b/ui/postrender.html
@@ -5,7 +5,7 @@
         <img src="/static/profileIcons/{{post.userId}}.jpg" alt="">
         <div class="creatorTextInfo">
             <span class="postCreatorNameinPost">{{post.username}}</span><br>
-            <span class="creationTimeofThepost">3 hours ago</span>
+            <span class="creationTimeofThepost">{{post.timePassed}}</span>
         </div>
     </div>
     <div class="caption">
