using cloud storage for icnos

--- a/ui/post.html
+++ b/ui/post.html
@@ -39,7 +39,7 @@
 
             <!-- <div class="posts">
                 <div class="creatorInfo">
-                    <img src="/static/profileIcons/{{userId}}.jpg" alt="">
+                    <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">{{userName}}</span><br>
                         <span class="creationTimeofThepost">3 hours ago</span>
@@ -64,7 +64,7 @@
             </div> -->
             <div class="posts">
                 <div class="creatorInfo">
-                    <img src="/static/profileIcons/{{userId}}.jpg" alt="">
+                    <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg" alt="">
                     <div class="creatorTextInfo">
                         <span class="postCreatorNameinPost">{{userName}}</span><br>
                         <span class="creationTimeofThepost">{{timePassed}}</span>
@@ -95,7 +95,7 @@
                 {%for cmt in comments%}
                 <div class="comment">
                     <div class="commentCreatorInfo">
-                        <img src="/static/profileIcons/{{cmt.userId}}.jpg" alt=""><span>{{cmt.userName}}</span>
+                        <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{cmt.userId}}.jpg" alt=""><span>{{cmt.userName}}</span>
                     </div>
                     <div class="commentContent">{{cmt.commentText}}</div>
                 </div>
