--- a/ui/index.html
+++ b/ui/index.html
@@ -40,7 +40,7 @@
             <div id="headerText">Home</div>
             <div id="addingPostArea">
                 <div id="addingPostElements">
-                    <div id="profilePcitrue"><img src="/static/profileIcons/{{userid}}.jpg" alt=""></div>
+                    <div id="profilePcitrue"><img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userid}}.jpg" alt=""></div>
                     <div id="writing">
                         <div id="textArea"><textarea placeholder="What's on you mind?" name="postText"
                                 id="postText"></textarea></div>
@@ -81,6 +81,7 @@
                 </div>
             </div> -->
         </div>
+       
     </div>
     <script src="/static/main.js"></script>
     <script>
