--- a/ui/postrender.html
+++ b/ui/postrender.html
@@ -2,7 +2,7 @@
 {%for post in posts%}
 <div class="posts">
     <div class="creatorInfo">
-        <img src="/static/profileIcons/{{post.userId}}.jpg" alt="">
+        <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{post.userId}}.jpg" alt="">
         <div class="creatorTextInfo">
             <span class="postCreatorNameinPost">{{post.username}}</span><br>
             <span class="creationTimeofThepost">{{post.timePassed}}</span>
