--- a/ui/profile.html
+++ b/ui/profile.html
@@ -32,7 +32,7 @@
         <div id="content">
             <div id="headerText">Profile</div>
             <div id="porfileInfoArea">
-                <img src="/static/profileIcons/{{userid}}.jpg" alt=""><span>{{name}}</span>
+                <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userid}}.jpg" alt=""><span>{{name}}</span>
             </div>
 
             <div class="posts">
