added photo feature in ai

--- a/ui/index.html
+++ b/ui/index.html
@@ -87,7 +87,7 @@
     <script>let requestRunning = false;</script>
     <script src="/static/main.js"></script>
     <script>
-        let maxPrevius = 0
+        var maxPrevius = 0
         var myDiv = document.getElementById("content");
         
         myDiv.addEventListener("scroll", () => {
