made better mobain versitoin

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?ihi">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,8 +24,8 @@
                 <div class="navELements currentNavLocation"><img src="/static/navIconHome.png" alt=""><span>Home</span>
                 </div>
                 <div class="navELements" onclick="gotoPage('/activity')"><img src="/static/activity.png"
-                        alt=""><span>Activity</span> <div id="unreadNotificaiton"></div></div>
-                <div class="navELements" onclick="gotoPage('/profile')"><img src="/static/profile.png"
+                        alt=""><span>Activity</span></div>
+                <div class="navELements" onclick="gotoPage('/profile?userid={{userid}}')"><img src="/static/profile.png"
                         alt=""><span>Profile</span></div>
 
 
