--- a/ui/post.html
+++ b/ui/post.html
@@ -1,43 +1,45 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/style.css?4334" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Protagonits</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="loadingScrseen"></div>
     <div id="parent">
-        <div class="navSpace"></div>
-        <div id="nav">
-            <div id="nav_Elements">
-                <div class="navELements" onclick="gotoPage('/')"><img src="/static/navIconHome.png" alt=""><span>Home</span>
-                </div>
-                <div class="navELements" onclick="gotoPage('/activity')"><img src="/static/activity.png"
-                        alt=""><span>Activity</span></div>
-                <div class="navELements" onclick="gotoPage('/profile')"><img src="/static/profile.png"
-                        alt=""><span>Profile</span></div>
-
-
-            </div>
+      <div class="navSpace"></div>
+      <div id="nav">
+        <div id="nav_Elements">
+          <div class="navELements" onclick="gotoPage('/')">
+            <img src="/static/navIconHome.png" alt="" /><span>Home</span>
+          </div>
+          <div class="navELements" onclick="gotoPage('/activity')">
+            <img src="/static/activity.png" alt="" /><span>Activity</span>
+          </div>
+          <div class="navELements" onclick="gotoPage('/profile')">
+            <img src="/static/profile.png" alt="" /><span>Profile</span>
+          </div>
         </div>
+      </div>
 
-        <div id="loadingScreenHtml" style="display: none;">
-            <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div>
+      <div id="loadingScreenHtml" style="display: none">
+        <div id="loadingScreenScreen">
+          <img id="loadingScreenLoadingIcon" src="/static/loading.png" alt="" />
         </div>
-        <div id="content">
+      </div>
+      <div id="content">
+        <div id="headerText">Post By <b>{{userName}}</b></div>
 
-            <div id="headerText">Post By <b>{{userName}}</b></div>
-
-            <!-- <div class="posts">
+        <!-- <div class="posts">
                 <div class="creatorInfo">
                     <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg" alt="">
                     <div class="creatorTextInfo">
@@ -62,97 +64,125 @@
                     </form>
                 </div>
             </div> -->
-            <div class="posts">
-                <div class="creatorInfo">
-                    <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg" alt="">
-                    <div class="creatorTextInfo">
-                        <span class="postCreatorNameinPost">{{userName}}</span><br>
-                        <span class="creationTimeofThepost">{{timePassed}}</span>
-                    </div>
-                </div>
-                <div class="caption">
-                    <span>{{caption}}</span>
-                </div>
-                {%if hasImage == "1" %}
-                <div class="imageFrame"><img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/postImage/{{postId}}.jpg" alt=""></div>
-                {%endif%}
-                <div class="postItarection">
-                    <div class="postInarectionItem"><img  src="/static/comments.png" alt=""><span>{{numOfComment}}</span></div>
-                    <div class="postInarectionItem"><img id="{{postId}}LIKE" onclick="sendAddingLikeRequest('{{postId}}')" src="/static/{{likeState}}.png" alt=""><span id="{{postId}}LIKECOUNT">{{numOfLike}}</span></div>
-                </div>
-                <div class="commentsItarections">
-                    <form onsubmit="return addingComment(event, '{{postId}}');" action="#">
-                    <input id="{{postId}}"  type="text" placeholder="Add a comment...">
-                    </form>
-                </div>
+        <div class="posts">
+          <div class="creatorInfo">
+            <img
+              src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{userId}}.jpg"
+              alt=""
+            />
+            <div class="creatorTextInfo">
+              <span class="postCreatorNameinPost">{{userName}}</span><br />
+              <span class="creationTimeofThepost">{{timePassed}}</span>
             </div>
-
-
-
-
-            <div id="commentsText">Comments</div>
-            <div id="comments">
-                {%for cmt in comments%}
-                <div class="comment">
-                    <div class="commentCreatorInfo">
-                        <img src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{cmt.userId}}.jpg" alt=""><span>{{cmt.userName}}</span>
-                    </div>
-                    <div class="commentContent">{{cmt.commentText}}</div>
-                </div>
-                {%endfor%}
+          </div>
+          <div class="caption">
+            <span>{{caption}}</span>
+          </div>
+          {%if hasImage == "1" %}
+          <div class="imageFrame">
+            <img
+              src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/postImage/{{postId}}.jpg"
+              alt=""
+            />
+          </div>
+          {%endif%}
+          <div class="postItarection">
+            <div class="postInarectionItem">
+              <img src="/static/comments.png" alt="" /><span
+                >{{numOfComment}}</span
+              >
             </div>
-
+            <div class="postInarectionItem">
+              <img
+                id="{{postId}}LIKE"
+                onclick="sendAddingLikeRequest('{{postId}}')"
+                src="/static/{{likeState}}.png"
+                alt=""
+              /><span id="{{postId}}LIKECOUNT">{{numOfLike}}</span>
+            </div>
+          </div>
+          <div class="commentsItarections">
+            <form
+              class="commetnSubmit"
+              onsubmit="return addingComment(event, '{{postId}}');"
+              action="#"
+            >
+              <input
+                id="{{postId}}"
+                type="text"
+                placeholder="Add a comment..."
+              />
+              <button class="commetnSubmitButton" type="submit">Send</button>
+            </form>
+          </div>
         </div>
+
+        <div id="commentsText">Comments</div>
+        <div id="comments">
+          {%for cmt in comments%}
+          <div class="comment">
+            <div class="commentCreatorInfo">
+              <img
+                src="https://pub-6f9406fdeb2544f7acb2423deb3f6e1b.r2.dev/profileIcons/{{cmt.userId}}.jpg"
+                alt=""
+              /><span>{{cmt.userName}}</span>
+            </div>
+            <div class="commentContent">{{cmt.commentText}}</div>
+          </div>
+          {%endfor%}
+        </div>
+      </div>
     </div>
     <script src="/static/main.js"></script>
     <script>
-        document.getElementById("postImage").addEventListener("change", function (event) {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    document.getElementById("previewImage").src = e.target.result;
-                    document.getElementById("selcetImageButtonPareant").style.width = "100px"
-                    document.getElementById("previewImage").style.width = "100px"
-                    document.getElementById("previewImage").style.borderRadius = "5px"
-
-
-                };
-                reader.readAsDataURL(file);
-            }
+      document
+        .getElementById("postImage")
+        .addEventListener("change", function (event) {
+          const file = event.target.files[0];
+          if (file) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+              document.getElementById("previewImage").src = e.target.result;
+              document.getElementById("selcetImageButtonPareant").style.width =
+                "100px";
+              document.getElementById("previewImage").style.width = "100px";
+              document.getElementById("previewImage").style.borderRadius =
+                "5px";
+            };
+            reader.readAsDataURL(file);
+          }
         });
-
     </script>
 
-<script>
+    <script>
+      function addimgAIComment(event, id) {
+        const formdata = new FormData();
+        formdata.append("postId", "{{postId}}");
+        fetch("/addaicomment", {
+          method: "POST",
+          headers: {
+            "X-CSRFToken": csrftoken,
+          },
+          credentials: "same-origin",
+          body: formdata,
+        })
+          .then((resp) => resp.text())
+          .then((data) => {
+            console.log("Comment added:", data);
+          })
+          .catch((error) => console.error("Error:", error));
 
-function addimgAIComment(event, id) {
-    const formdata = new FormData();
-    formdata.append("postId", '{{postId}}' );
-  fetch("/addaicomment", {
-    method: "POST",
-    headers: {
-      'X-CSRFToken': csrftoken,
-    },
-    credentials: 'same-origin',
-    body: formdata,
-  }).then(resp => resp.text()).then(data => {
-    console.log("Comment added:", data);
-    
-  }).catch(error => console.error('Error:', error));
+        return false;
+      }
+      addimgAIComment();
+      let aiintval = setInterval(addimgAIComment, 7000);
+      window.addEventListener("popstate", function (event) {
+        clearInterval(aiintval);
+        console.log("cleared interval");
+      });
 
-  return false;
-}
-addimgAIComment()
-let aiintval = setInterval(addimgAIComment, 7000);
-window.addEventListener('popstate', function (event) {
-  clearInterval(aiintval);
-  console.log("cleared interval")
-});
+        
 
-</script>
-
-
-</body>
-
+    </script>
+  </body>
 </html>
