using better versiton, and ai post creation

--- a/ui/index.html
+++ b/ui/index.html
@@ -90,7 +90,7 @@
         </div>
        
     </div>
-    <script>let requestRunning = false;</script>
+    <script>var requestRunning = false;</script>
     <script src="/static/main.js"></script>
     <script>
         var maxPrevius = 0
