--- a/ui/profile.html
+++ b/ui/profile.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    
+  <div id="loadingScreenHtml" style="display: none;">
+    <div id="loadingScreenScreen"><img id="loadingScreenLoadingIcon" src="/static/loading.png" alt=""></div>
+</div>
     <div id="parent">
         <div class="navSpace"></div>
         <div id="nav">
